@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 11-03-2006 changed: Edit Title for Video Database items now also changes the title in the xml file that holds the movie details.
+			This means the Movie Info window will now display the updated title as well.
  - 11-03-2006 fixed: [ 1435914 ] "Set lock" bug
  - 11-03-2006 added: Debug logging to xbmsp file opening.
  - 11-03-2006 fixed: [ 1394481 ] DVD Player - LCD Output.
